--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 </head>
 </head>
 <body>
-<h1>Google Calendar - Microsoft Office 365 i Google Apps Script</h1>
-<p id="demo">I'm hosted with GitHub Pages.</p>
-<button id="demo" onclick="buttonClickFunc()">Click me!</button>
-<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FWarsaw&amp;src=dG9tYXN6LmdyYWJhcmN6eWsub3V0c2lkZUBnbWFpbC5jb20&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=cGwucG9saXNoI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%2333B679&amp;color=%230B8043" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-</body>
+<div class="divcenter">
+	<div>
+		<h1>Google Calendar - Microsoft Office 365 i Google Apps Script</h1>
+		</b><button id="demo" onclick="buttonClickFunc()" class="button">Click me!</button></b>
+	</div>
+	<div>
+		<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FWarsaw&amp;src=dG9tYXN6LmdyYWJhcmN6eWsub3V0c2lkZUBnbWFpbC5jb20&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=cGwucG9saXNoI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%2333B679&amp;color=%230B8043&amp;showTitle=0&amp;showTz=0&amp;showTabs=1&amp;showPrint=0&amp;showDate=1&amp;showNav=1&amp;showCalendars=1" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+	</div>
+</div>
 </html>
